# Recommend

./: .env  .gitignore  Cargo.toml
connection_manager/: Cargo.toml
connection_manager/src/: lib.rs
connections/: Cargo.toml
connections/books_connection/: .env  Cargo.toml
connections/books_connection/migrations/2020-05-26-171929_create_books/: up.sql
connections/books_connection/migrations/2020-05-26-171934_create_users/: up.sql
connections/books_connection/migrations/2020-05-26-171937_create_ratings/: down.sql  up.sql
connections/books_connection/src/: lib.rs  models.rs  schema.rs
connections/movie_connection/: .env  Cargo.toml
connections/movie_connection/migrations/2020-05-24-181222_create_movies/: up.sql
connections/movie_connection/src/: lib.rs  models.rs  schema.rs
connections/movielens_connection/: .env  Cargo.toml
connections/movielens_connection/migrations/2020-05-28-075922_create_users/: up.sql
connections/movielens_connection/migrations/2020-05-28-075926_create_movies/: up.sql
connections/movielens_connection/migrations/2020-05-28-075928_create_ratings/: up.sql
connections/movielens_connection/src/: distances.rs  lib.rs  models.rs
engine/: Cargo.toml  Matrix.csv  Matrix.txt
engine/src/: lib.rs
