[package]
name = "engine"
version = "0.1.0"
authors = ["alrus2797 <alrus2797@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

movie_connection = {version = "*", path = "../connections/movie_connection"}
books_connection = {version = "*", path = "../connections/books_connection"}
movielens_connection = {version = "*", path = "../connections/movielens_connection"}
connection_manager = {version = "*", path = "../connection_manager"}
